<resources>
    <string name="dsds_string_apn_settings_nonamed_sim1or2_title">APNs: %s</string>
    <string name="dsds_string_apn_edit_nonamed_sim1or2_title">Edit access point: %s</string>
    <string name="dsds_network_settings_sel_sub">Select SIM card</string>
    <string name="dsds_string_network_callind_multi_sim">Select SIM card</string>
    <string name="dsds_network_title_one_default_nonamed">%s</string>
    <string name="dsds_network_title_one_user_named" formatted="false">%s (%s)</string>
    <string name="dsds_device_status">Status: %s</string>
    <string name="data_damage_title">Data damage</string>
    <string name="data_damage_summary">"The data on your phone is no longer accessible for unknown reason. 

To resume using your phone, you must perform a factory reset. When you set up your phone after the reset, you will have an opportunity to restore any data that was backed up to your Google account."</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="tethering_attention_detail_url">http://tether.docomo-de.net/dcmtrg/tether_en.html</string>
    <string name="display_category_personalisation_title">Personalization</string>
    <string name="theme_label">Theme</string>
    <string name="theme_summary">Change theme and wallpaper in the phone</string>
    <string name="theme_dialog_title_select_theme_txt">Select theme</string>
    <string name="swiqi_strings_swiqi_txt">Mobile BRAVIA Engine</string>
    <string name="swiqi_strings_swiqi_desc_txt">Image quality enhancer for photos and videos</string>
    <string name="sync_strings_auto_sync_warning_dialog_message">Data transmission charges may apply. An unlimited data plan is recommended.</string>
    <string name="data_traffic_cost_warning_dialog_message">Allow data traffic? Additional charges may apply depending on your network subscription. To avoid additional charges, disable data traffic when finished.</string>
    <string name="xloud_strings_xloud_txt">xLOUD™</string>
    <string name="xloud_strings_xloud_desc_txt">Enhance the loudness of speaker</string>
    <string name="lockpattern_activated">Unlock pattern activated!</string>
    <string name="lockscreen_strings_backup_question_answer_header_txt">Write answer</string>
    <string name="lockscreen_strings_backup_question_answer_hint_txt">Answer</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_info_txt">You need to select a security question as a backup solution, in case you forget the pattern.</string>
    <string name="lockscreen_strings_backup_question_security_question_prompt_title_txt">Security question</string>
    <string name="lockscreen_strings_backup_question_selector_title_txt">Select a question</string>
    <string name="lockscreen_strings_backup_question_answer_info_txt">Think of storing the answer in a safe place in case you forget it.</string>
    <string name="gui_ok_txt">OK</string>
    <string name="gps_anonymous_data_warning_message_txt">Data transmission charges may apply. Anonymous data will be collected when an application uses GPS.</string>
    <string name="wifi_wapi_as_cert">AS Certificate</string>
    <string name="wifi_wapi_user_cert">User Certificate</string>
    <string name="install_wapi_certs">Install WAPI certificates</string>
    <string name="summary_install_wapi_certs">Install certificates from internal storage</string>
    <string name="wifi_security_short_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_short_wapi_cert">WAPI CERT</string>
    <string name="wifi_security_wapi_psk">WAPI PSK</string>
    <string name="wifi_security_wapi_cert">WAPI CERT</string>
    <string name="master_reset_title">Settings reset</string>
    <string name="master_reset_summary">Resets phone to its original settings without erasing user data</string>
    <string name="master_reset_desc">"This will reset all settings of your phone, including:
"<li>Phone system settings</li>"
"<li>Bundled application settings</li>"
It will not erase:
"<li>User specified settings</li>"
"<li>Installed applications</li>"
"<li>Files in internal storage and/or SD card, such as music or photos</li></string>
    <string name="master_reset_button_text">Reset phone</string>
    <string name="master_reset_final_desc">Reset phone settings to their original values? It is impossible to reverse this action! Phone will be unavailable during reset.</string>
    <string name="master_reset_final_button_text">Reset settings</string>
    <string name="master_reset_gesture_prompt">Draw your unlock pattern</string>
    <string name="master_reset_gesture_explanation">You must draw your unlock pattern to confirm a phone reset.</string>
    <string name="master_reset_failed">No reset was performed.</string>
    <string name="master_reset_intent">MasterReset</string>
    <string name="master_reset_cancel">Master reset canceled. Airplane mode not on.</string>
    <string name="location_warning_message">Data transmission charges may apply.</string>
    <string name="agree_label">Agree</string>
    <string name="disagree_label">Disagree</string>
    <string name="sim_strings_pin_attempts_remaining_txt">Attempts remaining:</string>
    <string name="error_name_conflict">Name conflict with locked Access point name (APN). Please change.</string>
    <string name="entry_font_size_small">Small</string>
    <string name="entry_font_size_normal">Normal</string>
    <string name="entry_font_size_large">Large</string>
    <string name="dual_tether_apn_dialog_title">Select an APN</string>
    <string name="dual_tether_apn_enterprise">Orange Internet Enterprise</string>
    <string name="dual_tether_apn_consumer">Orange Internet</string>
    <string name="wifi_reconnect">Reconnect</string>
    <string name="wifi_connected_limited">Limited connectivity</string>
    <string name="wifi_connected_limited_with_ssid">Connected to %1$s with limited connectivity</string>
    <string name="wifi_strings_autoip_txt">Auto IP support</string>
    <string name="wifi_strings_autoip_description_txt">Assign Auto IP address if DHCP fails</string>
    <string name="phone_memory">Phone memory</string>
    <string name="erase_emmc_storage">Erase internal storage</string>
    <string name="erase_emmc_storage_desc">"Clear all data on phone's internal storage, such as music and photos."</string>
    <string name="emmc_memory">Internal storage</string>
    <string name="emmc_format">Clear internal storage</string>
    <string name="emmc_format_desc">"Format (erase) phone's internal storage"</string>
    <string name="emmc_mount">Mount internal storage</string>
    <string name="emmc_mount_summary">Mount the internal storage</string>
    <string name="emmc_erase">Erase internal storage.</string>
    <string name="emmc_erase_description">This action will clear internal storage. You will lose all data on it.</string>
    <string name="emmc_erase_button">Clear internal storage</string>
    <string name="emmc_erase_everything_desc">Clear all files saved in it? Action cannot be reversed!</string>
    <string name="usb_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the USB storage.</string>
    <string name="emmc_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the internal storage</string>
    <string name="data_usage_app_restrict_all">Restrict all data</string>
    <string name="data_usage_app_restrict_all_summary">Disable foreground and background data on mobile data network only. Wi-Fi network will be used if available.</string>
    <string name="data_usage_app_restrict_all_summary_disabled">To restrict foreground and background data for this app, set mobile data limit first.</string>
    <string name="data_usage_app_restrict_all_data_dialog_title">Restrict all data?</string>
    <string name="data_usage_app_restrict_all_data_dialog">"This feature may cause an app that depends on data traffic to stop working when Wi-Fi network is not available.

Tap View app settings to control data usage for this app specifically."</string>
    <string name="data_usage_restrict_all_denied_dialog">"Restricting foreground and background data is only possible when you've set a mobile data limit."</string>
    <string name="sms_counter_application_name_text">SMS counter</string>
    <string name="sms_counter_tips_text">To check SMS counter settings, turn on SMS counter.</string>
    <string name="sms_counter_tips_no_sim_text">No SIM card available</string>
    <string name="sms_counter_tips_flight_mode_text">Turn off airplane mode to activate SMS counter</string>
    <string name="sms_counter_display_total_message_text">From %1$s to %2$s: Totally %3$d messages sent.</string>
    <string name="sms_counter_display_exceed_warning_text">Warning level exceeded: %d</string>
    <string name="sms_counter_display_exceed_maximum_text">Maximum limitation exceeded: %d</string>
    <string name="sms_counter_list_message_warning_level_text">Warning level</string>
    <string name="sms_counter_list_message_maximum_text">Maximum limitation</string>
    <string name="sms_counter_list_count_cycle_text">Cycle mode</string>
    <string name="sms_counter_list_start_date_text">Counting period</string>
    <string name="sms_counter_popup_count_cycle_monthly_text">Monthly</string>
    <string name="sms_counter_popup_count_cycle_weekly_text">Weekly</string>
    <string name="sms_counter_popup_weekday_Monday_text">Monday</string>
    <string name="sms_counter_popup_weekday_Tuesday_text">Tuesday</string>
    <string name="sms_counter_popup_weekday_Wednesday_text">Wednesday</string>
    <string name="sms_counter_popup_weekday_Thursday_text">Thursday</string>
    <string name="sms_counter_popup_weekday_Friday_text">Friday</string>
    <string name="sms_counter_popup_weekday_Saturday_text">Saturday</string>
    <string name="sms_counter_popup_weekday_Sunday_text">Sunday</string>
    <string name="sms_counter_popup_start_date_title_text">Count cycle reset date</string>
    <string name="sms_counter_toast_warning_text">Warning level must be less than maximum limitation</string>
    <string name="sms_counter_toast_limit_text">Maximum limitation must be more than warning level</string>
    <string name="sms_counter_popup_maximum_title_text">Note</string>
    <string name="sms_counter_popup_maximum_descripton_text">The specified message maximum limitation reached. Additional charge may apply.</string>
    <string name="sms_counter_notification_warning_title_text">Message warning</string>
    <string name="sms_counter_notification_warning_description_text">Message warning level reached. Tap to view SMS counter settings.</string>
    <string name="sms_counter_notification_maximum_title_text">Maximum limitation</string>
    <string name="sms_counter_notification_maximum_description_text">Message maximum limitation reached. Tap to view SMS counter settings.</string>
    <string name="sms_counter_widget_hint_txt">Tap to set up</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
</resources>